Updated portfolio design and content

--- a/index.html
+++ b/index.html
@@ -2,18 +2,127 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Nitin Singh | Data Analyst</title>
+  <title>Nitin Singh | Entry-Level Data Analyst</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-  <h1>Nitin Singh</h1>
-  <h2>Entry-Level Data Analyst</h2>
+  <div class="layout">
 
-  <p>
-    Data Analyst focused on SQL, Excel, Python, and analytics projects.
-    Turning raw data into clear business insights.
-  </p>
+    <!-- SIDEBAR -->
+    <aside class="sidebar">
+
+      <!-- PROFILE IMAGE -->
+      <img src="profile.jpg" alt="Nitin Singh" class="profile-pic">
+
+      <h1>Nitin Singh</h1>
+      <h2>Entry-Level Data Analyst</h2>
+
+      <p class="location">📍 Berlin, Germany</p>
+
+      <p class="tagline">
+        📊 Turning real-world data into clear insights.
+      </p>
+
+      <nav class="side-links">
+        <a href="mailto:nitinsingh.web07@gmail.com">📧 Email</a>
+        <a href="https://github.com/nitinsinghdm" target="_blank">💻 GitHub</a>
+        <a href="https://linkedin.com/in/nitinsinghdm" target="_blank">🔗 LinkedIn</a>
+      </nav>
+
+    </aside>
+
+    <!-- MAIN CONTENT -->
+    <main class="content">
+
+      <!-- ABOUT -->
+      <section>
+        <h3>👋 About</h3>
+
+        <div class="summary">
+          <p>
+            I am a result-oriented entry-level Data Analyst with project-based experience working on real-world datasets
+            across multiple domains. I work with SQL for data querying, Excel for data cleaning, analysis, and modeling,
+            and Tableau for data visualization and storytelling.
+          </p>
+
+          <p>
+            My work focuses on exploratory data analysis, identifying patterns and trends, and translating raw data into
+            clear KPIs and dashboards that answer business questions. I value structured thinking, data quality, and clarity,
+            and aim to support data-driven decision-making through well-organized analysis and actionable insights.
+          </p>
+        </div>
+      </section>
+
+      <!-- TECH STACK -->
+      <section>
+        <h3>🧰 Tech Stack</h3>
+
+        <h4>Data & Querying</h4>
+        <p>SQL (Joins, CTEs, Subqueries, Aggregations, Window Functions)</p>
+
+        <h4>Analysis & Modeling</h4>
+        <p>Excel (Power Query, Pivot Tables, DAX, Advanced Formulas)</p>
+        <p>Python (pandas, NumPy, scikit-learn)</p>
+
+        <h4>Visualization & Reporting</h4>
+        <p>Tableau · Excel Dashboards</p>
+
+        <h4>Tools</h4>
+        <p>Git · GitHub · VS Code</p>
+      </section>
+
+      <!-- PROJECTS -->
+      <section>
+        <h3>🚀 Projects</h3>
+
+        <div class="project">
+          <h4>SQL Data Science Job Market Analysis</h4>
+          <p>
+            Analyzed data science job postings using advanced SQL techniques to identify salary trends,
+            role-based patterns, and in-demand skills across locations.
+          </p>
+        </div>
+
+        <div class="project">
+          <h4>Excel Data Analytics Dashboard</h4>
+          <p>
+            Built interactive dashboards and KPIs using Power Query, Pivot Tables, and DAX
+            to transform raw data into actionable business insights.
+          </p>
+        </div>
+
+        <div class="project">
+          <h4>Public Transport Delay Prediction</h4>
+          <p>
+            Developed predictive models on GTFS public transport data using Python and machine learning,
+            achieving a simulated ~15% reduction in journey delays.
+          </p>
+        </div>
+      </section>
+
+      <!-- EDUCATION -->
+      <section>
+        <h3>🎓 Education</h3>
+
+        <p>
+          <strong>M.Sc. Data Analytics</strong><br>
+          Berlin School of Business & Innovation (BSBI), Berlin<br>
+          <span class="muted">2024 – 2025</span>
+        </p>
+
+        <p>
+          <strong>B.E. Information Technology</strong><br>
+          University of Mumbai, India<br>
+          <span class="muted">2019 – 2023</span>
+        </p>
+      </section>
+
+    </main>
+
+  </div>
 
 </body>
 </html>
